# API-Python

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
deployment/: Dockerfile
deployment/migrations/: 001_init.sql
src/: app.py
src/controllers/: autores.py  base.py  libro.py
src/infrastructure/: __init__.py
src/infrastructure/database/: session.py
src/infrastructure/settings/: local.ini  models.py  parsers.py
src/middlewares/: __init__.py  database.py
src/models/: __init__.py  autor.py  base.py  libro.py
src/routes/: __init__.py  autores.py  health_check.py  libros.py
src/schemas/: autor.py  libro.py
src/utils/: exceptions.py
