[tool.poetry]
name = "api-python-autocom"
version = "0.1.0"
description = ""
authors = ["Jorge Regis <jorgerv@getfairplay.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.35"
psycopg = "^3.2.3"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
